# Studyfy

./: .env.example  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package.json  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy-pages.yml
apps/api/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
apps/web/: Dockerfile  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
docs/: AI_PROMPTS.md  API_SPEC.md  ARCHITECTURE.md  DATABASE.md  DESIGN_SYSTEM.md  OBSERVABILITY.md  PRD.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md
docs/adr/: 0000-template.md  0001-monorepo-turborepo.md  0002-polyglot-node-python-split.md  0003-vector-store-pgvector-then-qdrant.md  0004-llm-gateway-litellm-claude-primary.md  0005-rag-zero-hallucination-guardrails.md  0006-multitenancy-postgres-rls.md  0007-self-host-whisper-embeddings-cost.md  0008-fsrs-over-sm2-spaced-repetition.md  README.md
infra/ai-proxy/: README.md  worker.js  wrangler.toml
infra/docker/: docker-compose.yml
services/ai/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/ai/app/: main.py
services/ai/app/core/: config.py
services/ai/app/pipelines/: guardrail.py
services/ai/app/routers/: health.py  ingestion.py  rag.py
services/ai/tests/: test_guardrail.py
(+33 files in other folders)
